--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   equatable: ^0.6.0
   http: ^0.12.0+2
   shimmer: ^1.0.1
+  flutter_beacon:
+    path: ../
+  device_info: ^0.4.1+1
 
 dev_dependencies:
   flutter_test:
